--- a/manuscript.tex
+++ b/manuscript.tex
@@ -69,17 +69,17 @@ The spherical harmonic coefficients are computed from the polyhedron shape model
 This model is applied while close to the body while the harmonic expansion is applied when outside the circumscribing sphere.
 Similarly, Reference~\citenum{herrera2014} uses two different harmonic expansion models to represent the gravitational field inside and outside of the circumscribing sphere.
 In this case, the coefficients must be carefully chosen to ensure continuity of the gravitational field at the circumscribing sphere.
-In both cases, this type of model results in a cumbersome gravity field expression that requires additional constraints to ensure continuity and validity at the radius of the circumscribing sphere.
+In both cases, this type of approach results in a cumbersome gravity field expression that requires additional constraints to ensure continuity and validity at the radius of the circumscribing sphere.
 Any integration software will need to incorporate a switching mechanism between the models when crossing the circumscribing sphere.
 Instead, we use a different approach and model the asteroid as a constant-density polyhedron.
 
-In contrast, the polyhedron model results in an exact closed form expression of the gravitational potential field~\cite{werner1994,werner1996}.
+The polyhedron model results in an exact closed form expression of the gravitational potential field~\cite{werner1994,werner1996}.
 This type of model results in the exact potential up to the accuracy of the shape model and a constant density assumption.
 However, the calculation of the potential, or the acceleration, requires a summation over every face of the polyhedron. 
 As a result, it typically requires a large amount of computation in contrast to the harmonic expansion models. 
 However, the formulation is well suited to parallelization and improvements with efficient coding practices. 
 Finally, the polyhedron method is well suited to trajectories passing close to the body and offers a simple metric to determine if a particle is inside the asteroid.
-The use of the polyhedron model results in a single expression of the gravitational field that is valid everywhere around the body of the asteroid.
+The use of the polyhedron model results in a single expression of the gravitational field that is valid everywhere around the body.
 
 % use of low thrust propulsion
 The application of optimal control methods for orbital trajectory design is nontrivial.
@@ -88,21 +88,18 @@ However, the asteroid system dynamics are nonlinear and exhibit chaotic behavior
 This makes solving the optimization problem highly dependent on the initial condition.
 Similar to the three-body problem, there is an insufficient number of analytical constants to derive an analytical solution in general.
 As a result, accurate numerical methods are required to determine optimal solutions.
-These methods are critically dependent on an accurate initial guess in order to allow for convergence to an optimal solution.
+These methods are critically dependent on an accurate initial guess in order to allow for convergence.
 
 % Discuss previous work and their drawbacks to determine transfers about asteroids
-There has been a large amount of work on the optimal control of spacecraft orbital transfers in the three-body problem~\cite{mingotti2011,grebow2011}.
-The dynamics of a spacecraft about small bodies is very similar to that of the three-body problem and much of the theory developed there is also applicable.
+We model the motion of particles around asteroids using the restricted full two-body problem.
+The dynamics of a spacecraft about small bodies is very similar to that of the three-body problem.
+This model has many similarities with the restricted three body problem, and much of the theory developed for the three-body problem is also applicable~\cite{mondelo2010,herrera2014}.
+In addition, there has been a large amount of work on the optimal control of spacecraft orbital transfers in the three-body problem~\cite{mingotti2011,grebow2011}.
 Typically, the optimal control problem is solved via direct methods, which approximate the continuous time problem as a parameter optimization problem.
 The state and control trajectories are discretly parameterized and solved in the form of a nonlinear optimization problem.
 Alternatively, indirect methods apply calculus of variations to derive the necessary conditions for optimality. 
 This yields a lower dimensioned problem as compared to the direct approach.
 In addition, satisfication of the necessary conditions guarantee local optimality in contrast to directo methods which result in sub-optimal solutions.
-
-% Detail of work - more empasis and add the novelty of our work
-The irregular shape of asteroids leads to a richer dynamics as compared to the familiar Kepler's problem.
-We model the motion of particles around asteroids using the restricted full two-body problem.
-This model has many similarities with the restricted three body problem, and much of the theory developed for the three-body problem is also applicable~\cite{mondelo2010,herrera2014}.
 
 In this paper, we extend the design method previously developed in the three-body problem to motion about asteroids~\cite{kulumani2015}.
 Our systematic approach avoids the difficulties in selecting an appropriate initial guess for optimization.
@@ -113,15 +110,16 @@ In addition, we utilize a polyhedron gravitational model which is accurate and i
 We formulate an optimal control problem to calculate the reachability set on a lower dimensional \Poincare section.
 Given an initial condition and fixed time horizon, the reachable set is the set of states attainable, subject to the operational constraints of the spacecraft.
 The generation of the reachable set allows for a more systematic method of determining initial conditions and eases the burden on the designer.
-The \Poincare section reduces the dimensionality of teh system dynamics to the study of a related discrete update map.
-This allows for the design of complex transfer trajectories through the use of a lower dimensional space.
-Rather than relying on intuition or insight into the problem, trajectory states are chosen which minimize a distance metric toward a desired target on the \Poincare section.
+The \Poincare section reduces the dimensionality of the system dynamics to the study of a related discrete update map.
+This allows for the design of complex transfer trajectories on a lower dimensional space.
+Rather than relying on intuition or insight into the problem, trajectories are chosen which minimize a distance metric toward a desired target on the \Poincare section.
 This simple methodology allows for extended transfer trajectories which iteratively approach a desired target orbit.
 
 In short, the authors present a systematic method of generating optimal transfer orbits about asteroids.
 Typically, optimal transfers are generated using a direct optimization method which results in a sub-optimal solution.
 This paper present an indirect optimal control formulation to generate the reachability set on a \Poincare section.
 Using the reachability set on the \Poincare section allows for a simple method of choosing trajectories which approach a target.
+In addition, the reachability set gives an indication of the regions of the phase space accessible to the spacecraft.
 This method allows us to avoid the difficulties inherent in choosing valid initial conditions for the computation of optimal transfer trajectories.
 We develop the optimal control formulation and apply this method to a transfer about asteroid 4769 Castalia.
 
@@ -168,7 +166,7 @@ We can also define the outward normal vector to face \( f\)  as
 \end{align}
 and the outward facing normal vector to each edge as
 \begin{align}\label{eq:edge_normal}
-    \hat{\vecbf{n}}_{i+1,i}^f &= \parenth{\vecbf{v}_{i+1} - \vecbf{v}_i} \times \hat{\vecbf{n}}_f .
+    \hat{\vecbf{n}}_{i+1,i}^f &= \parenth{\vecbf{v}_{i+1} - \vecbf{v}_i} \times \hat{\vecbf{n}}_f \in \R^{3 \times 1}.
 \end{align}
 For each face we define the face dyad \( \vecbf{F}_f \) as
 \begin{align}\label{eq:face_dyad}
@@ -177,13 +175,13 @@ For each face we define the face dyad \( \vecbf{F}_f \) as
 Each edge is a member of two faces and has an outward pointing edge normal vector, given in~\cref{eq:edge_normal}, perpendicular to both the edge and the face normal.
 For the edge connecting the vectors \( \vecbf{v}_1 \) and \( \vecbf{v}_2 \), which are shared between the faces \(A\) and \( B\), the per edge dyad is given by
 \begin{align}\label{eq:edge_dyad}
-    \vecbf{E}_{12} = \hat{\vecbf{n}}_A \parenth{\hat{\vecbf{n}}_{12}^A}^T + \hat{\vecbf{n}}_B \hat{\vecbf{n}}_{21}^B \in \R^{3 \times 3}.
+    \vecbf{E}_{12} = \hat{\vecbf{n}}_A \hat{\vecbf{n}}_{12}^A + \hat{\vecbf{n}}_B \hat{\vecbf{n}}_{21}^B \in \R^{3 \times 3}.
 \end{align}
 The edge dyad \( \vecbf{E}_e  \), is defined for each edge and is a function of the two adjacent faces meeting at that edge.
 The face dyad \( \vecbf{F}_f \), is defined for each face and is a function of the face normal vectors.
 
 Let \( \vecbf{r}_i \in \R^{3 \times 1} \) be the vector from the spacecraft to the vertex \( \vecbf{v}_i \) and it's length is given by \( r_i = \norm{\vecbf{r}_i} \in \R^{1} \).
-The per-edge factor \( L_e \in \R^{1}\), for the edge connecting vertices \( \vecbf{v}_i \) and \( \vecbf{v}_j \), with a constant length \( e_{ij} \) is
+The per-edge factor \( L_e \in \R^{1}\), for the edge connecting vertices \( \vecbf{v}_i \) and \( \vecbf{v}_j \), with a constant length \( e_{ij} = \norm{\vecbf{e}_{ij}} \in \R^1\) is
 \begin{align}\label{eq:edge_factor}
     L_e &= \ln \frac{r_i + r_j + e_{ij}}{r_i + r_j - e_{ij}}.
 \end{align}
@@ -193,14 +191,14 @@ For the face defined by the vertices \( \vecbf{v}_i, \vecbf{v}_j, \vecbf{v}_k \)
 \end{align}
 The gravitational potential due to a constant density polyhedron is given as
 \begin{align}\label{eq:potential}
-    U(\vecbf{r}) &= \frac{1}{2} G \sigma \sum_{e \in \text{edges}} \vecbf{r}_e \cdot \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e - \frac{1}{2}G \sigma \sum_{f \in \text{faces}} \vecbf{r}_f \cdot \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f ,
+    U(\vecbf{r}) &= \frac{1}{2} G \sigma \sum_{e \in \text{edges}} \vecbf{r}_e \cdot \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e - \frac{1}{2}G \sigma \sum_{f \in \text{faces}} \vecbf{r}_f \cdot \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f \in \R^1,
 \end{align}
 where \( \vecbf{r}_e\) and \(\vecbf{r}_f \) are the vectors from the spacecraft to any point on the respective edge or face, \( G\) is the universal gravitational constant, and \( \sigma \) is the constant density of the asteroid.
 Furthermore we can use these definitions to define the attraction, gravity gradient matrix, and Laplacian as
 \begin{align}
-    \nabla U ( \vecbf{r} ) &= -G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e + G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f , \label{eq:attraction}\\
-    \nabla \nabla U ( \vecbf{r} ) &= G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e  \cdot L_e - G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \omega_f , \label{eq:gradient_matrix}\\
-    \nabla^2 U &= -G \sigma \sum_{f \in \text{faces}}  \omega_f \label{eq:laplacian}.
+    \nabla U ( \vecbf{r} ) &= -G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e + G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f \in \R^{3 \times 1} , \label{eq:attraction}\\
+    \nabla \nabla U ( \vecbf{r} ) &= G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e  \cdot L_e - G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \omega_f \in \R^{3 \times 3}, \label{eq:gradient_matrix}\\
+    \nabla^2 U &= -G \sigma \sum_{f \in \text{faces}}  \omega_f \in \R^1 .\label{eq:laplacian}
 \end{align}
 
 One interesting thing to note is that both~\cref{eq:face_dyad,eq:edge_dyad} can be precomputed without knowledge of the position of the satellite.
@@ -243,8 +241,8 @@ The body-fixed equations of motion of a massless particle about an arbitrarily r
 \begin{align}\label{eq:body_eoms}
     \ddot{\vecbf{r}} + 2 \vecbf{\Omega} \times \dot{\vecbf{r}} + \vecbf{\Omega} \times \parenth{ \vecbf{\Omega} \times \vecbf{r} } + \dot{\vecbf{\Omega}} \times \vecbf{r} = \nabla U(\vecbf{r}) ,
 \end{align}
-where \( \vecbf{\Omega} \) is the instantaneous angular velocity vector of the asteroid represented in the body-fixed frame, \( \vecbf{r} \) is the position of the particle in the body-fixed frame, and \( U_{\vecbf{r}} \) is the gradient of the gravitational potential~\cite{scheeres2012a}.
-We assume that the asteroid rotates at a uniform rate, \( \norm{\vecbf{\Omega}} = \omega \), about the axis of the maximum moment of inertia, \( \vecbf{\Omega} = \omega \hat{\vecbf{z} }\).
+where \( \vecbf{\Omega} \in \R^{3 \times 1}\) is the instantaneous angular velocity vector of the asteroid represented in the body-fixed frame, \( \vecbf{r} \) is the position of the particle in the body-fixed frame, and \( \nabla U_{\vecbf{r}} \) is the gradient of the gravitational potential~\cite{scheeres2012a}.
+We assume that the asteroid rotates at a uniform rate, \( \norm{\vecbf{\Omega}} = \omega \in \R^1 \), about the axis of the maximum moment of inertia, \( \vecbf{\Omega} = \omega \hat{\vecbf{z} }\).
 As a result, we can represent the equations of motion in scalar form as
 \begin{align} \label{eq:eoms}
     \begin{split}
@@ -254,7 +252,7 @@ As a result, we can represent the equations of motion in scalar form as
     \end{split}
 \end{align}
 
-In this situation, the state is defined as \( \vecbf{x} = \bracket{\vecbf{r}~\>\vecbf{v}}^T\) with \(\vecbf{r} = \bracket{x~\>y~\>z}^T \in \R^{3\times1}\) and \(\vecbf{v}= \bracket{ \dot{x}~\>\dot{y}~\>\dot{z} }^T \in \R^{3\times1}\) representing the position and velocity with respect to the body-fixed frame, respectively.
+In this situation, the state is defined as \( \vecbf{x} = \bracket{\vecbf{r}~\>\vecbf{v}}^T \in \R^{6 \times 1}\) with \(\vecbf{r} = \bracket{x~\>y~\>z}^T \in \R^{3\times1}\) and \(\vecbf{v}= \bracket{ \dot{x}~\>\dot{y}~\>\dot{z} }^T \in \R^{3\times1}\) representing the position and velocity with respect to the body-fixed frame, respectively.
 We further assume that our spacecraft is capable of exerting a translational acceleration, \( \vecbf{u} \in \R^{3\times1} \), in any direction, while subject to a maximum magnitude constraint, \( \norm{\vecbf{u}} \leq u_m \).
 This is typical of many spacecraft which offer full rotational freedom and can direct a potentially varying force or acceleration in any direction.
 The equations of motion may be rewritten in state space form as
@@ -395,7 +393,7 @@ By convention we assume that the angles lie in the following range
     \phi_3 &\in [ 0 , 2 \pi ) ,
 \end{align*}
 such that we parameterize all directions on the three sphere, \(\S^3\).
-Finally, we also incorporate a control acceleration magnitude constraint given by
+Finally, we also incorporate the control acceleration magnitude constraint as
 \begin{align}\label{eq:control_constraint}
     c(\vecbf{u}) = \vecbf{u}^T \vecbf{u} - u_m^2 \leq 0 ,
 \end{align}
@@ -548,7 +546,7 @@ In practice this is not a large concern as we have direct control over the space
 With the reachability set encompassing the target orbit, we can generate a final transfer to the target.
 We use the minimum state calculated from the final stage to serve as the initial condition of the transfer.
 A final optimal transfer is computed to satisfy the fixed terminal state \( \vecbf{x}(t_f) = \vecbf{x}_t \) and the bounded control magnitude constraint.
-\Cref{fig:trajectory} shows the entire transfer trajectory, from the three reachable set trajectories as well as the final transfer to the target.
+\Cref{fig:trajectory} shows the entire transfer trajectory, from the four reachable set trajectories as well as the final transfer to the target.
 \begin{figure}[htbp] 
     \centering 
     \begin{subfigure}[htbp]{0.45\textwidth} 
